--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "bugKira - The Bug Tracker",
   "main": "./server/index.js",
   "scripts": {
-    "start": "node ./server/index.js",
-    "start:watch": "nodemon ./server/index.js",
+    "start": "node ./dist/index.js",
+    "start:client": "npm start --perfix client",
+    "start:server": "ts-node ./server/index.ts",
+    "watch:server": "ts-node-dev --respawn ./server/index.ts",
+    "build:client": "npm run build --prefix client",
+    "build:server": "tsc -p .",
+    "build": "npm run build:server && npm run build:client",
+    "dev": "concurrently \"npm run watch:server\" \"cd client && npm start\"",
+    "clean:soft": "rm -rf dist && cd client && rm -rf build",
+    "clean:client": "cd client && rm -rf node_modules build",
+    "clean:server": "rm -rf node_modules dist",
     "lint": "eslint \"**/*.{ts,tsx,js}\"",
     "lint:fix": "eslint \"**/*.{ts,tsx,js}\" --fix",
     "format": "prettier \"**/*.{ts,tsx,js,css}\" --write",
@@ -15,6 +24,14 @@
   "author": "Rohit Bakoliya<bakoliyarohit00@gmai.com> (https://rohitbakoliya.github.io/)",
   "license": "MIT",
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.27",
+    "@types/passport": "^1.0.6",
+    "@types/passport-google-oauth20": "^2.0.6",
     "concurrently": "^5.3.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
@@ -28,9 +45,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
-    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "serve": "^11.3.2",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.5"
   },
   "husky": {
     "hooks": {
@@ -52,8 +72,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "helmet": "^4.4.1",
+    "joi": "^17.4.0",
     "mongoose": "^5.11.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
