--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,8 @@
 {
   "env": {
-    "node": true,
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
   },
   "extends": [
     "standard",
@@ -12,15 +12,19 @@
     "plugin:jsx-a11y/recommended",
     "prettier/react"
   ],
-  "plugins": ["react", "prettier", "react-hooks", "jsx-a11y"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks", "jsx-a11y"],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": 12,
     "sourceType": "module"
   },
   "rules": {},
   "settings": {
     "react": {
-      "version": "detect"
+      "version": "latest"
     }
   }
 }
