--- a/client/package.json
+++ b/client/package.json
@@ -2,19 +2,21 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.5",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +43,14 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.20.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
+    "@types/yup": "^0.29.11",
     "cross-env": "^7.0.3"
   }
 }
