--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Bug Kira",
+  "name": "Bug Kira | Bug tracker dashboard",
   "icons": [
     {
       "src": "favicon.ico",
