--- a/.eslintrc
+++ b/.eslintrc
@@ -10,9 +10,10 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:security/recommended",
     "prettier/react"
   ],
-  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks", "jsx-a11y"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks", "jsx-a11y", "security"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
