--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-security": "^1.4.0",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -61,7 +62,7 @@
     }
   },
   "lint-staged": {
-    "(server|client)/**/*.{ts,tsx}": [
+    "**/*.{ts,tsx}": [
       "npm run format:staged",
       "eslint --cache --fix"
     ]
