--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
