--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,10 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "rules": {},
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-unused-vars": "off"
+  },
   "settings": {
     "react": {
       "version": "latest"
