--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Rohit Bakoliya<bakoliyarohit00@gmai.com> (https://rohitbakoliya.github.io/)",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
@@ -32,6 +33,8 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
+    "@types/multer-gridfs-storage": "^4.0.1",
     "@types/node": "^14.14.27",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
@@ -51,7 +54,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "^1.4.0",
-    "husky": "^5.0.9",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
@@ -87,6 +90,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0"
