chore: updates - BE: email verification enpoint created
- test-deploy: updates
- moongoose type confilicts resolved

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "./server/index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "start:client": "npm start --perfix client",
+    "start:client": "cd client && npm start",
     "start:server": "ts-node ./server/index.ts",
     "watch:server": "ts-node-dev --respawn ./server/index.ts",
     "build:client": "npm run build --prefix client",
-    "build:server": "tsc -p .",
+    "build:server": "tsc -b .",
     "build": "npm run build:server && npm run build:client",
+    "heroku-postbuild": "npm run build",
     "dev": "concurrently \"npm run watch:server\" \"cd client && npm start\"",
     "prod": "npm run build:client && cross-env NODE_ENV=production npm run watch:server",
     "clean:soft": "rm -rf dist && cd client && rm -rf build",
