--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,9 @@
     "outDir": "dist",
     "rootDir": "server",
     "allowJs": true,
+    "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": [
-    "client",
-    "node_modules",
-    "dist",
-    "build"
-  ]
+  "exclude": ["client", "node_modules", "dist", "build"]
 }
