--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGO_URI=<mongo_uri>
 GOOGLE_CLIENT_ID=<google_client_id>
 GOOGLE_CLIENT_SECRET=<google_secret>
 JWT_TOKEN_SECRET=<jwt_token_secret>
+SENDGRID_API_KEY=<sendgrid_api_key>
