--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/cors": "^2.8.9",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/express-mongo-sanitize": "^1.3.2",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
@@ -86,6 +88,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
     "express-static-gzip": "^2.1.1",
     "helmet": "^4.4.1",
     "http-status-codes": "^2.1.4",
@@ -97,6 +101,7 @@
     "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "xss-clean": "^0.1.1"
   }
 }
