--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "node ./dist/index.js",
     "start:client": "cd client && npm start",
     "start:server": "ts-node ./server/index.ts",
-    "watch:server": "ts-node-dev --respawn ./server/index.ts",
+    "watch:server": "concurrently \"tsc -w\" \"nodemon ./dist/index.js\"",
     "build:client": "npm run build --prefix client",
     "build:server": "tsc -b .",
     "build": "npm run build:server && npm run build:client",
     "heroku-prebuild": "cd client && npm install --dev",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
-    "dev": "concurrently \"npm run watch:server\" \"cd client && npm start\"",
+    "heroku-postbuild": "npm run build",
+    "dev": "concurrently \"tsc -w\" \"nodemon ./dist/index.js\" \"cd client && npm start\"",
     "prod": "npm run build:client && cross-env NODE_ENV=production npm run watch:server",
     "clean:soft": "rm -rf dist && cd client && rm -rf build",
     "clean:client": "cd client && rm -rf node_modules build",
@@ -60,10 +60,10 @@
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   },
   "husky": {
