--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/memory-cache": "^0.2.1",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/multer-gridfs-storage": "^4.0.1",
@@ -43,6 +44,7 @@
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/passport-jwt": "^3.0.5",
+    "@types/sharp": "^0.27.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "concurrently": "^5.3.0",
@@ -82,6 +84,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -95,6 +98,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -102,6 +106,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "sharp": "^0.27.2",
     "xss-clean": "^0.1.1"
   }
 }
