--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/memory-cache": "^0.2.1",
+    "@types/mongoose-auto-increment": "^5.0.33",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/multer-gridfs-storage": "^4.0.1",
@@ -100,6 +101,7 @@
     "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
     "mongoose": "^5.11.15",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
