--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./server/index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "start:client": "cd client && npm start",
     "start:server": "ts-node ./server/index.ts",
+    "watch:client": "cd client && npm start",
     "watch:server": "concurrently \"tsc -w\" \"nodemon ./dist/index.js\"",
     "build:client": "npm run build --prefix client",
     "build:server": "tsc -b .",
