feat: bugs page created, -chore: prettier config updated

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,5 @@
   "bracketSpacing": true,
   "proseWrap": "always",
   "arrowParens": "avoid",
-  "jsxSingleQuote": true
+  "jsxSingleQuote": false
 }
