--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.1",
     "react-hot-toast": "^1.0.2",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
