--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,14 @@
     "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.1",
     "react-hot-toast": "^1.0.2",
+    "react-markdown": "^6.0.1",
     "react-masonry-css": "^1.0.16",
+    "react-mentions": "^4.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-syntax-highlighter": "^15.4.3",
+    "react-tabs": "^3.2.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -64,8 +68,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-fontawesome": "^1.6.4",
+    "@types/react-mentions": "^4.1.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/react-tabs": "^2.3.2",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.7",
     "@types/yup": "^0.29.11"
