--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": "./src",
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,9 +17,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "noImplicitReturns": true,
+    "noImplicitAny": false
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "exclude": ["node_modules", "build", "public"]
 }
