--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "sharp": "^0.27.2",
+    "socket.io": "^4.0.1",
     "xss-clean": "^0.1.1"
   }
 }
