--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
+    "normalizr": "^3.6.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
