--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.2",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0",
